unpackaged/main/default/objects/ABC123__c/fields/ABC123_LONG_PICKLIST__c.field-meta.xml
<CustomField>
    <fullName>ABC123_LONG_PICKLIST__c</fullName>
    <label>ABC123 LONG PICKLIST</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>THIS</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>REAAAAAAAAAAAAAAALLLLLLLLLLLLLLLLLLLLLLLLLLLYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!1236871623871682376KJSHDFKJHSHGDKFHSKJDH</fullName>
            </value>
            <value>
                <fullName>LONG</fullName>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>