unpackaged/main/default/objects/ABC123__c/fields/AKJSHDKJAHSKJDH__c.field-meta.xml
<CustomField>
    <fullName>AKJSHDKJAHSKJDH__c</fullName>
    <label>AKJSHDKJAHSKJDH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>abc</fullName>
            </value>
            <value>
                <fullName>123</fullName>
            </value>
            <value>
                <fullName>asd]sfdg</fullName>
            </value>
            <value>
                <fullName>dfg</fullName>
            </value>
            <value>
                <fullName>ghjghj</fullName>
            </value>
            <value>
                <fullName>skljdfhkjhdsf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>