unpackaged/main/default/objects/ABC123__c/fields/Dependent_Field_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field_Level_1__c</fullName>
    <formula>Dependent_Field_Level_2__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Field Level 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>