unpackaged/main/default/objects/ABC123__c/fields/Dependent_Field_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field_Level_3__c</fullName>
    <label>Dependent Field Level 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>