unpackaged/main/default/objects/ABC123__c/fields/FIELD_EXISTS_IN_BOTH_SOURCE_AND_TARGET__c.field-meta.xml
<CustomField>
    <fullName>FIELD_EXISTS_IN_BOTH_SOURCE_AND_TARGET__c</fullName>
    <description>This field exists in both source and target, and should be deployable directly onto the Layout.</description>
    <label>FIELD EXISTS IN BOTH SOURCE AND TARGET</label>
    <length>10</length>
    <type>Text</type>
</CustomField>