unpackaged/main/default/objects/ABC123__c/fields/FIELD_EXISTS_IN_SOURCE_BUT_NOT_IN_TARGET__c.field-meta.xml
<CustomField>
    <fullName>FIELD_EXISTS_IN_SOURCE_BUT_NOT_IN_TARGET__c</fullName>
    <description>This field exists in my source org, but not in the target. Deploying the field to a layout without also deploying the custom object field should cause the PA to complain.</description>
    <label>FIELD EXISTS IN SOURCE BUT NOT IN TARGET</label>
    <length>10</length>
    <type>Text</type>
</CustomField>