unpackaged/main/default/objects/ABC123__c/fields/Maximum_length_field_nameeeeeeeeeeeeeeee__c.field-meta.xml
<CustomField>
    <fullName>Maximum_length_field_nameeeeeeeeeeeeeeee__c</fullName>
    <description>This is just so I can have a really long field name lmao</description>
    <label>Maximum length field nameeeeeeeeeeeeeeee</label>
    <length>25</length>
    <type>Text</type>
</CustomField>