unpackaged/main/default/objects/ABC123__c/fields/ONE_NEW__c.field-meta.xml
<CustomField>
    <fullName>ONE_NEW__c</fullName>
    <label>ONE (NEW!!!)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>