unpackaged/main/default/objects/ABC123__c/fields/Partial_picklist__c.field-meta.xml
<CustomField>
    <fullName>Partial_picklist__c</fullName>
    <label>Partial picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two (or is it? [apiname])</fullName>
                <label>Two</label>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
            <value>
                <fullName>Six</fullName>
            </value>
            <value>
                <fullName>Eight</fullName>
            </value>
            <value>
                <fullName>Nine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>