unpackaged/main/default/objects/ABC123__c/fields/Potato__c.field-meta.xml
<CustomField>
    <fullName>Potato__c</fullName>
    <label>Potato</label>
    <length>2</length>
    <type>Text</type>
</CustomField>