unpackaged/main/default/objects/ABC123__c/fields/RENAMED_ABC123_GEOLOCATION_FIELD__c.field-meta.xml
<CustomField>
    <fullName>RENAMED_ABC123_GEOLOCATION_FIELD__c</fullName>
    <label>ABC123_GEOLOCATION_FIELD</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>